<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_general">
    <PreferenceCategory android:title="@string/settings_general">
        <EditTextPreference
            android:key="sound"
            android:title="@string/settings_sound" />
        <SwitchPreferenceCompat
            android:key="notification"
            android:title="@string/settings_notifications" />
        <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
            android:defaultValue="@android:color/darker_gray"
            android:title="@string/settings_color"
            app:viewSize="large"
            app:numColumns="5"
            android:key="color" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_advertisement">
        <SwitchPreferenceCompat
            android:key="instantBuy"
            android:title="@string/settings_instant_buy" />
        <com.ssau.lab1.ui.dialogs.CalendarPreference android:key="date" />
    </PreferenceCategory>
</PreferenceScreen>
