<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_menu_help"
        android:menuCategory="container"
        android:title="@string/help"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/about"
                android:title="@string/about"
                app:showAsAction="never" />
            <item
                android:id="@+id/buy"
                android:title="@string/buy"
                app:showAsAction="never" />
            <item
                android:id="@+id/exit"
                android:title="@string/exit"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>